install:
	@echo '##############################################################'
	@echo '##############################################################'
	@echo 'The Go client library should be insalled via "go get", please see /lib/go/README'
	@echo '##############################################################'
	@echo '##############################################################'

check-local:
	go test ./thrift

all-local: check-local

